first commit azd 18

--- a/LAHJA/Shared/MainLayout.razor
+++ b/LAHJA/Shared/MainLayout.razor
@@ -576,10 +576,9 @@
     }
 
     async void logout(bool isauth)
-
     {
-
-        NavigationManager.NavigateTo($"Logout/{false}");
+        var cancelUrl = System.Web.HttpUtility.UrlEncode(NavigationManager.Uri);
+        NavigationManager.NavigateTo($"Logout/{cancelUrl}/{false}");
     }
     private void ChangeFillColor(bool _isDarkMode)
     {
