--- a/LAHJA/UI/Components/DialogBox.razor
+++ b/LAHJA/UI/Components/DialogBox.razor
@@ -54,4 +54,25 @@
             },
         };
 
+
+    // private Task showDialog(DataBuildUserSubscriptionInfo data)
+    // {
+    //     var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
+
+    //     var parameters = new DialogParameters<SubscriptionDetails>
+    //     {
+    //         { x =>x.DataBuild,data },
+    //         { x =>x.Language,lg},
+    //         { x =>x.SubmitPause,SubmitPause},
+    //         { x =>x.SubmitResume,SubmitResume},
+    //         { x =>x.SubmitDelete,SubmitDelete},
+    //         { x =>x.SubmitCheckoutManage,SubmitCheckoutManage},
+    //     };
+
+    //     DialogService.Show<SubscriptionDetails>("", parameters, options);
+    //     Navigation.NavigateTo($"/settings/spaces/{data.Id}");
+    //     return Task.CompletedTask;
+
+    // }
+
 }
