--- a/LAHJA/UI/Components/StudioLahjaAi/ChatT2Text.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/ChatT2Text.razor
@@ -33,10 +33,10 @@
 
 }
 
-@if (isLoading)
+@* @if (isLoading)
 {
     <Loading IsLoading="@isLoading" />
-}
+} *@
 @* <MudCard Elevation="25" Class="rounded-lg p-0 border-0  h-100 d-flex flex-column" Style="max-width: 100%; margin: auto;">
     @if (DataBuild != null)
     {
