--- a/LAHJA/UI/Components/StudioLahjaAi/T2Speech.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/T2Speech.razor
@@ -34,11 +34,11 @@
                      SrcIFrame="@_srcFrame" />
 }
 
-@if (isLoading)
+@* @if (isLoading)
 {
     <Loading IsLoading="@isLoading" />
 }
-
+ *@
 <div class="d-flex Cont-speech" style="display:none !important" >
 
 <MudCard Elevation="0"   Class="rounded-lg pb-4 panal-speech">
