--- a/LAHJA/Pages/_Host.cshtml
+++ b/LAHJA/Pages/_Host.cshtml
@@ -96,6 +96,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/stripeInterop.js"></script>
     <script type="module" src="js/models.js"></script>
 
     <!-- Add Bootstrap JS and dependencies -->
