--- a/LAHJA/UI/Components/ProFile/Cards/UserAvaterCard.razor
+++ b/LAHJA/UI/Components/ProFile/Cards/UserAvaterCard.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using System.Web
+@inject NavigationManager Navigation
 <MudContainer Class="p-3">
     <MudMenu Class="mr-2">
         <ActivatorContent>
@@ -13,7 +14,7 @@
         </ActivatorContent>
         <ChildContent>
             <MudMenuItem Href="dashboard/profile">Profile</MudMenuItem>
-            <MudMenuItem Href="logout/false">Sign Out</MudMenuItem>
+            <MudMenuItem Href="@($"Logout/{HttpUtility.UrlEncode(Navigation.Uri)}/{false}")">Sign Out</MudMenuItem>
         </ChildContent>
     </MudMenu>
 </MudContainer>
