--- a/LAHJA/UI/Components/StudioLahjaAi/T2SpeechLive.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/T2SpeechLive.razor
@@ -25,7 +25,7 @@
             onload="@OnFrameLoaded">
     </iframe> *@
 
-    <IframeComponent Lg="@CurrentLanguage"
+    <IframeComponent Lg="@Lg"
                      StyleCss="width:100%;height:100%;border:none;"
                      IsLoading="true"
                      UrlCancel="@UrlCancel"
@@ -33,10 +33,10 @@
                      SrcIFrame="@_srcFrame" />
 }
 
-@if (isLoading)
+@* @if (isLoading)
 {
     <Loading IsLoading="@isLoading" />
-}
+} *@
 
 @code
 {
